fix: java10 warning